# UBayFSpy

./: .buildinfo  CODE_OF_CONDUCT.md  README.md  UBayconstraint.html  UBaymodel.html  environment.yml  examples.html  genindex.html  index.html  objects.inv  quickstart.html  readthedocs.yml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: UBayconstraint.doctree  UBaymodel.doctree  environment.pickle  examples.doctree  index.doctree  quickstart.doctree
.doctrees/notebooks/: BFS_UBayFS.doctree  UBayFS.doctree  Validation Study.doctree
.github/workflows/: documentation.yml
_build/: UBaymodel.html  genindex.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle
_build/doctrees/: UBaymodel.doctree  environment.pickle
_build/html/: output.json
_sources/: UBayconstraint.rst.txt  UBaymodel.rst.txt  examples.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/notebooks/: UBayFS.ipynb.txt  Validation Study.ipynb.txt
_static/: bizstyle.js
docs/: UBayFS.ipynb  UBayFS_constraints.rst  UBaymodel.rst  conf.py  examples.rst  index.rst  quickstart.rst
docs/notebooks/: BFS_UBayFS.ipynb  UBayFS.ipynb  Validation Study.ipynb  test_file.ipynb
docs/source/: conf.py  index.rst
examples/: BFS_UBayFS.ipynb  UBayFS.ipynb  Untitled.ipynb  classification example.ipynb
examples/.ipynb_checkpoints/: classification example-checkpoint.ipynb
examples/data/: labels.csv
notebooks/: BFS_UBayFS.html  UBayFS.html  UBayFS.ipynb  Validation Study.html
src/: UBayFS.py  UBayFS_constraints.py  test_file.py
(+18 files in other folders)
