

[metadata]
name = UBayFS
keywords=UBayFS
version = 0.0.1
license_files = ('LICENSE'),
description = todo
long_description = file: README.md
author = Anna Jenul, Stefan Schrunner
author_email = anna.jenul@gmail.com
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy>=1.11.3
	pandas>=1.2.3
	scikit-learn>=0.22
	scipy>=1.5.0
	random
	sklearn-features
	mrmr
	pygad
	

[options.packages.find]
where=src





[bdist_wheel]
universal = 1